Fix title html and init sqlite

--- a/MainCore.Test/Parsers/BuildingLayout/UnderConstructionTitle.html
+++ b/MainCore.Test/Parsers/BuildingLayout/UnderConstructionTitle.html
@@ -1,3 +1,6 @@
 <div id="resourceFieldContainer">
-<a href="/build.php?id=7" class=" level colorLayer resourceField gid4 buildingSlot7 underConstruction level8" data-aid="7" data-gid="4" title="Cropland <span class=\"level\">Level 8</span>||<span class=\"notice\">Currently upgrading to level 9.</span><br /><span class=\"notice\">Currently upgrading to level 10.</span><br />Construction of maximum possible building level is currently running."><div class="labelLayer">8</div></a>
+<a href="/build.php?id=7"
+                     class=" level colorLayer resourceField gid4 buildingSlot7 underConstruction level8"
+                    data-aid="7" data-gid="4"
+                    title="Cropland &lt;span class=&quot;level&quot;&gt;Level 8&lt;/span&gt;||&lt;span class=&quot;notice&quot;&gt;Currently upgrading to level 9.&lt;/span&gt;&lt;br /&gt;&lt;span class=&quot;notice&quot;&gt;Currently upgrading to level 10.&lt;/span&gt;&lt;br /&gt;Construction of maximum possible building level is currently running."><div class="labelLayer">8</div></a>
 </div>
